relative path for socket.io

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </canvas>
     <a href="https://github.com/andlehma/usatweetmap" id="github">github</a>
   </div>
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="usatweetmap/socket.io/socket.io.js"></script>
   <script src="client.js"></script>
 </body>
 </html>
